--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,24 @@ body {
 
 .BlogCards,
 .ThemeCards {
+  padding: 2rem;
   /* border: 2px black solid; */
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 1rem;
+  grid-gap: 2rem;
 }
+
+@media (min-width: 1559px) {
+  .ThemeCards {
+    display: flex;
+    flex-direction: row;
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+    grid-gap: 1rem; */
+    justify-content: space-between;
+  }
+}
+
 .card,
 .themeCard {
   border: 2px gray solid;
@@ -73,12 +85,12 @@ body {
 }
 
 /* Component ThemeCards has themeCard elements */
-@media (max-width: 1300px) {
+@media (max-width: 1359px) {
   .ThemeCards .ui.card:last-child {
     display: none;
   }
 }
-@media (max-width: 930px) {
+@media (max-width: 1026px) {
   .ThemeCards .ui.card:nth-child(3) {
     display: none;
   }
